--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@vueuse/core": "^8.1.2",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
+    "qsjs": "^1.0.0",
     "vee-validate": "^4.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
